+ show title * fix last page spacing * fix clock * fix progress loading * fix touch area padding

--- a/src/styles/read.less
+++ b/src/styles/read.less
@@ -164,11 +164,23 @@
       right: 2vw;
       top: 1vh;
     }
+    .uppad{
+      height: 1vh;
+      width: 100vw;
+      right: 0vw;
+      top: 0vh;
+    }
     .down{
       height: 20vh;
       width: 76vw;
       left: 2vw;
       bottom: 1vh;
+    }
+    .downpad{
+      height: 1vh;
+      width: 100vw;
+      left: 0vw;
+      bottom: 0vh;
     }
     .left{
       height: 78vh;
@@ -176,11 +188,23 @@
       left: 2vw;
       top: 1vh;
     }
+    .leftpad{
+      height: 100vh;
+      width: 2vw;
+      left: 0vw;
+      top: 0vh;
+    }
     .right{
       height: 78vh;
       width: 20vw;
       right: 2vw;
       bottom: 1vh;
+    }
+    .rightpad{
+      height: 100vh;
+      width: 2vw;
+      right: 0vw;
+      bottom: 0vh;
     }
     .battery{
       height: 8px;
@@ -196,6 +220,11 @@
         background-color: #ccc;
 	background-image: none;
       }
+    }
+    .title{
+      bottom: 1px;
+      left: 45px;
+      font-size: 0.5rem;
     }
     .pagination{
       bottom: 1px;
